finish ui rework

--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 -->
   <div class="container">
     <div class="controls">
-      <div id="operations" class="controls">
-        <button id="insert-button" class="operation">insert</button>
-        <input type="checkbox" id="animation-toggle">
-        <button id="delete-button" class="operation">delete</button>
-        <button id="find-button" class="operation">find</button>
+      <div id="operations">
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
+        <button id="insert-button" class="operation">insert</button>
         <!-- 
         TODO this test string results in error when undoing and redoing last operation
         -->
