--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         TODO this test string results in error when undoing and redoing last operation
         -->
 				<input type="text" name="number-input" id="number-input" autocomplete="off"
-					value="57, 91, 26, 73, 17, 45, 67, 89, 34, 12, 78">
+					value="57, 91, 26, 73, 17, 45, 67, 89, 34, 12">
 				<!-- test strings -->
+				<!-- TODO Fix the 78 case when inserting at 8x speed. Right now -->
+				<!-- it breaks visually -->
+				<!-- 57, 91, 26, 73, 17, 45, 67, 89, 34, 12, 78 -->
 				<!-- 6,4,5,2,8,9,10,11,12,13 -->
 				<!-- 7,4,5 -->
 			</div>
